tests/ui/delegation/generics/unelided-lifetime-in-sig-ice-156848.stderr
error: inferred lifetimes are not allowed in delegations as we need to inherit signature
  --> $DIR/unelided-lifetime-in-sig-ice-156848.rs:14:18
   |
LL |     reuse Trait::foo::<> { self.0 }
   |                  ^^^

warning: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/unelided-lifetime-in-sig-ice-156848.rs:16:24
   |
LL |     fn foo<'a: 'a>(&self) {}
   |                    - the late bound lifetime parameter is introduced here
...
LL |     reuse Trait::foo::<'_> as bar { self.0 }
   |                        ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #42868 <https://github.com/rust-lang/rust/issues/42868>
   = note: `#[warn(late_bound_lifetime_arguments)]` (part of `#[warn(future_incompatible)]`) on by default

error: inferred lifetimes are not allowed in delegations as we need to inherit signature
  --> $DIR/unelided-lifetime-in-sig-ice-156848.rs:16:24
   |
LL |     reuse Trait::foo::<'_> as bar { self.0 }
   |                        ^^

error: aborting due to 2 previous errors; 1 warning emitted

